# BeeBot

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  compile_commands.json  conf.json.sample  docker-compose.yml  install.sh  preinstall.sh
cmake/: FindPQXX.cmake  SetCompilerFlags.cmake  dependencies.cmake  function.cmake
cmake/Modules/: Findpqxx.cmake
scripts/: database_build.sh  getDatabase.sh
srcs/beeBot/: CMakeLists.txt
srcs/libBeeBot/: CMakeLists.txt  database.hpp
srcs/libBeeCoin/: CMakeLists.txt  Plateform.cpp  Plateform.hpp  Plateform_bittrex.cpp  Platform.cpp  Platform.hpp  SchedulerTask.cpp  SchedulerTask.hpp  bot.hpp
srcs/libBeeCoin/Database/: Database.cpp  Database.hpp
srcs/libBeeCoin/HttpRequest/: CurlWrapper.cpp  CurlWrapper.hpp
srcs/libBeeCoin/Platform/: Platform.cpp  Platform.hpp  Platform_bittrex.cpp  Platform_bittrex.hpp
srcs/libBeeCoin/Utils/: hmac.cpp  hmac.hpp
srcs/tests/: CMakeLists.txt  main.cpp
